src/ui/snapshots/state/default/pr_selection/dependency_dialog.snap
---
source: src/ui/state/default/pr_selection.rs
expression: harness.backend()
---
"                                                                                "
" ┌Pull Requests───────────────────────────────────────────────────────────────┐ "
" │    ┌Dependencies for PR #100 - Fix login bug──────────────────────────┐    ↑ "
" │→   │Dependency graph not available                                    │)   █ "
" │    │(Requires local_repo to be configured)                            │)   █ "
" │    │                                                                  │ed),█ "
" │    │                                                                  │    █ "
" │    │                                                                  │    █ "
" │    │                                                                  │    █ "
" │    │                                                                  │    █ "
" │    │                                                                  │    █ "
" │    │                                                                  │    █ "
" │    │                                                                  │    ║ "
" │    │                                                                  │    ↓ "
" └────│                                                                  │────┘ "
" ┌Work│                                                                  │────┐ "
" │Bug │                                                                  │    │ "
" │● Cl│                                                                  │n   │ "
" └────│                                                                  │────┘ "
" ┌Hist│                                                                  │────┐ "
" │No h│                                                                  │    │ "
" └────│                                                                  │────┘ "
" ┌Repr│                                                                  │────┐ "
" │1. N│                                                                  │    │ "
" │2. C│                                                                  │    │ "
" └────│Direct: Cyan | Transitive: Gray  •  [F]: Overlapping lines | [P]: │────┘ "
" ┌Help└───────────────Press Esc/g/q to close, ↑/↓ to scroll──────────────┘────┐ "
" │↑/↓: Navigate PRs | ←/→: Navigate Work Items | /: Search | Space: Toggle | E│ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
