src/ui/snapshots/state/default/pr_selection/dependency_highlighting_first_pr.snap
---
source: src/ui/state/default/pr_selection.rs
expression: harness.backend()
---
"                                                                                                                        "
" ┌Pull Requests───────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │      PR #     Date         Title                         Author            Work Items             PR Dependenc     ↑ "
" │→     100      2024-01-10   Fix login bug                 Alice Johnson     #1001 (Closed)         1 P              █ "
" │      101      2024-01-12   Update user profile page desi Bob Wilson        #1002 (Active)         1 F              █ "
" │      102      2024-01-14   Add analytics tracking        Carol Martinez    #1003 (Resolved), #100                  █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    ║ "
" │                                                                                                                    ║ "
" │                                                                                                                    ↓ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Work Item (1/1)─────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │Bug         #1001   Login button not responding                                                                     │ "
" │● Closed          | Iteration: Project\Sprint 4 | Assigned: Alice Johnson                                           │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌History─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │No history available                                                                                                │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Reproduction Steps (use ←/→ to navigate work items)─────────────────────────────────────────────────────────────────┐ "
" │1. Navigate to login page                                                                                           │ "
" │2. Click login button                                                                                               │ "
" │3. Nothing happens                                                                                                  │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Help────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │↑/↓: Navigate | Space: Toggle | i: Select+Related | I: All Related | /: Search | g: Graph | s: Multi-select | ,:    │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                                                        "
