src/ui/snapshots/state/default/pr_selection/dependency_highlighting_middle_pr.snap
---
source: src/ui/state/default/pr_selection.rs
expression: harness.backend()
---
"                                                                                "
" ┌Pull Requests───────────────────────────────────────────────────────────────┐ "
" │      PR #     Date         Title       Author      Work Items  PR Dependenc↑ "
" │      100      2024-01-10   Fix login b Alice Johns #1001 (Clos 1 P         ║ "
" │→     101      2024-01-12   Update user Bob Wilson  #1002 (Acti 1 F         █ "
" │      102      2024-01-14   Add analyti Carol Marti #1003 (Reso             █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            ║ "
" │                                                                            ↓ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Work Item (1/1)─────────────────────────────────────────────────────────────┐ "
" │Task        #1002   Redesign user profile page                              │ "
" │● Active          | Iteration: Project\Sprint 5 | Assigned: Bob Wilson      │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌History─────────────────────────────────────────────────────────────────────┐ "
" │No history available                                                        │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Description (use ←/→ to navigate work items)────────────────────────────────┐ "
" │Update the user profile page with new design mockups                        │ "
" │                                                                            │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Help────────────────────────────────────────────────────────────────────────┐ "
" │↑/↓: Navigate PRs | ←/→: Navigate Work Items | /: Search | Space: Toggle |  │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
