src/ui/snapshots/state/default/pr_selection/details_hidden.snap
---
source: src/ui/state/default/pr_selection.rs
assertion_line: 3696
expression: harness.backend()
---
"                                                                                "
" ┌Pull Requests───────────────────────────────────────────────────────────────┐ "
" │      PR #     Date         Title       Author      Work Items  PR Dependenc↑ "
" │→     100      2024-01-10   Fix login b Alice Johns #1001 (Clos             █ "
" │      101      2024-01-12   Update user Bob Wilson  #1002 (Acti             █ "
" │      102      2024-01-14   Add analyti Carol Marti #1003 (Reso             █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            ║ "
" │                                                                            ║ "
" │                                                                            ↓ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Help────────────────────────────────────────────────────────────────────────┐ "
" │↑/↓: Navigate PRs | ←/→: Navigate Work Items | /: Search | Space: Toggle |  │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
