src/ui/snapshots/state/default/pr_selection/empty_list.snap
---
source: src/ui/state/default/pr_selection.rs
expression: harness.backend()
---
"┌No Pull Requests──────────────────────────────────────────────────────────────┐"
"│                  No pull requests found without merged tags.                 │"
"│                                                                              │"
"│                              Press 'q' to quit.                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
