src/ui/snapshots/state/default/pr_selection/mouse_click_highlight.snap
---
source: src/ui/state/default/pr_selection.rs
assertion_line: 2747
expression: harness.backend()
---
"                                                                                "
" ┌Pull Requests───────────────────────────────────────────────────────────────┐ "
" │      PR #     Date         Title       Author      Work Items  PR Dependenc↑ "
" │      100      2024-01-10   Fix login b Alice Johns #1001 (Clos             ║ "
" │      101      2024-01-12   Update user Bob Wilson  #1002 (Acti             █ "
" │→     102      2024-01-14   Add analyti Carol Marti #1003 (Reso             █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            ↓ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Work Item (1/2)─────────────────────────────────────────────────────────────┐ "
" │User Story  #1003   Implement Google Analytics                              │ "
" │● Resolved        | Iteration: Project\Sprint 5 | Assigned: Carol Martinez  │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌History─────────────────────────────────────────────────────────────────────┐ "
" │No history available                                                        │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Description (use ←/→ to navigate work items)────────────────────────────────┐ "
" │Add Google Analytics tracking to the application                            │ "
" │                                                                            │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Help────────────────────────────────────────────────────────────────────────┐ "
" │↑/↓: Navigate PRs | ←/→: Navigate Work Items | /: Search | Space: Toggle | E│ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
