src/ui/snapshots/state/default/pr_selection/mouse_double_click_toggle.snap
---
source: src/ui/state/default/pr_selection.rs
expression: harness.backend()
---
"                                                                                "
" ┌Pull Requests (1/3)─────────────────────────────────────────────────────────┐ "
" │      PR #     Date         Title           Author          Work Items      ↑ "
" │→     102      2024-01-14   Add analytics t Carol Martinez  #1003 (Resolved)█ "
" │      101      2024-01-12   Update user pro Bob Wilson      #1002 (Active)  █ "
" │  ✓   100      2024-01-10   Fix login bug   Alice Johnson   #1001 (Closed)  █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            ║ "
" │                                                                            ↓ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Work Item (1/1)─────────────────────────────────────────────────────────────┐ "
" │Bug         #1001   Login button not responding                             │ "
" │● Closed          | Iteration: Project\Sprint 4 | Assigned: Alice Johnson   │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌History─────────────────────────────────────────────────────────────────────┐ "
" │No history available                                                        │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Reproduction Steps (use ←/→ to navigate work items)─────────────────────────┐ "
" │1. Navigate to login page                                                   │ "
" │2. Click login button                                                       │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Help────────────────────────────────────────────────────────────────────────┐ "
" │↑/↓: Navigate PRs | ←/→: Work Items | /: Search | Space: Toggle | Enter: Con│ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
