src/ui/snapshots/state/default/pr_selection/mouse_scroll_down.snap
---
source: src/ui/state/default/pr_selection.rs
expression: harness.backend()
---
"                                                                                "
" ┌Pull Requests───────────────────────────────────────────────────────────────┐ "
" │      PR #     Date         Title           Author          Work Items      ↑ "
" │      100      2024-01-10   Fix login bug   Alice Johnson   #1001 (Closed)  ║ "
" │→     101      2024-01-12   Update user pro Bob Wilson      #1002 (Active)  █ "
" │      102      2024-01-14   Add analytics t Carol Martinez  #1003 (Resolved)█ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            ║ "
" │                                                                            ↓ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Work Item (1/1)─────────────────────────────────────────────────────────────┐ "
" │Task        #1002   Redesign user profile page                              │ "
" │● Active          | Iteration: Project\Sprint 5 | Assigned: Bob Wilson      │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌History─────────────────────────────────────────────────────────────────────┐ "
" │No history available                                                        │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Description (use ←/→ to navigate work items)────────────────────────────────┐ "
" │Update the user profile page with new design mockups                        │ "
" │                                                                            │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Help────────────────────────────────────────────────────────────────────────┐ "
" │↑/↓: Navigate PRs | ←/→: Navigate Work Items | /: Search | Space: Toggle | E│ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
