src/ui/snapshots/state/default/pr_selection/mouse_scroll_up.snap
---
source: src/ui/state/default/pr_selection.rs
assertion_line: 2962
expression: harness.backend()
---
"                                                                                "
" ┌Pull Requests───────────────────────────────────────────────────────────────┐ "
" │      PR #     Date         Title       Author      Work Items  PR Dependenc↑ "
" │→     100      2024-01-10   Fix login b Alice Johns #1001 (Clos             █ "
" │      101      2024-01-12   Update user Bob Wilson  #1002 (Acti             █ "
" │      102      2024-01-14   Add analyti Carol Marti #1003 (Reso             █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            ║ "
" │                                                                            ↓ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Work Item (1/1)─────────────────────────────────────────────────────────────┐ "
" │Bug         #1001   Login button not responding                             │ "
" │● Closed          | Iteration: Project\Sprint 4 | Assigned: Alice Johnson   │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌History─────────────────────────────────────────────────────────────────────┐ "
" │No history available                                                        │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Reproduction Steps (use ←/→ to navigate work items)─────────────────────────┐ "
" │1. Navigate to login page                                                   │ "
" │2. Click login button                                                       │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Help────────────────────────────────────────────────────────────────────────┐ "
" │↑/↓: Navigate PRs | ←/→: Navigate Work Items | /: Search | Space: Toggle |  │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
